# adventOfCode

2023/: Cargo.toml  justfile
2023/daily-template/: main.rs
2023/src/: lib.rs
2024/: .envrc  .gitignore  .justfile  Cargo.toml  bacon.toml  flake.nix
2024/daily-template/: Cargo.toml
2024/daily-template/src/: part1.rs  part2.rs
2024/day-01/: Cargo.toml
2024/day-01/src/: custom_error.rs  part1.rs  part2.rs
2024/day-02/: Cargo.toml
2024/day-02/src/: part1.rs  part2.rs
2024/day-03/: Cargo.toml
2024/day-03/src/: part1.rs  part2.rs
2024/day-04/: Cargo.toml
2024/day-04/src/: part1.rs  part2.rs
2024/day-05/: Cargo.toml
2024/day-05/src/: part1.rs  part2.rs
2024/day-06/: Cargo.toml
2024/day-06/src/: common.rs  grid.rs  lib.rs  part1.rs  part2.rs
2024/day-07/: Cargo.toml
2024/day-07/src/: part1.rs  part2.rs
2024/day-08/: Cargo.toml
2024/day-08/src/: common.rs  grid.rs  part1.rs  part2.rs
2024/day-09/: Cargo.toml
2024/day-09/src/: part1.rs  part2.rs
2024/day-10/: Cargo.toml
2024/day-10/src/: common.rs  lib.rs  part1.rs  part2.rs
2024/day-11/: Cargo.toml
2024/day-11/src/: part1.rs  part2.rs
2024/day-12/: Cargo.toml
2024/day-13/: Cargo.toml
2024/day-14/: Cargo.toml
2024/day-15/: Cargo.toml
2024/day-16/: Cargo.toml
2024/day-17/: Cargo.toml  run.txt
2024/day-18/: Cargo.toml
2024/day-19/: Cargo.toml
2024/day-20/: Cargo.toml
2024/day-21/: Cargo.toml
2024/day-22/: Cargo.toml
2024/day-24/: Cargo.toml
2024/day-25/: Cargo.toml  input1.txt
2024/scripts/: get-aoc-input.rs
2024/utils/: Cargo.toml
(+29 files in other folders)
