[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
eframe = "0.20"
egui = "0.20"
futures = "0.3.29"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
rangemap = "1.4.0"
tokio = { version="1.35.0" , features=["full"]}
